--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                             <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-graduation-cap"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
-                                <span class="red">偶爾</span>
-                                <p class="w-50 p-5">會去學校上課</p>
+                                <p class="w-50 p-5">偶爾會去學校上課</p>
                             </div>   
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2024至今</span></div>
@@ -99,7 +98,7 @@
                           <img src="assets/picture/csnigger.gif" class="crap" alt="iamsteve">
                           <div class="card-body">
                             <h5 class="card-title">打遊戲</h5>
-                            <p class="card-text">CS2 Valorant R6</p>
+                            <p class="card-text">CS2 Valorant <span class="red">R6</span></p>
                           </div>
                           <div class="card-footer">
                             <small class="text-muted">FPS遊戲</small>
