--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </section>
             <hr class="m-0" />
             <!-- Education-->
-            <section class="resume-section" id="education">
+            <section class="resume-section" id="interest">
                 <div class="resume-section-content">
                     <h2 class="mb-5">我的興趣</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -124,7 +124,7 @@
                             <small class="text-muted">我是長髮男這很正常</small>
                           </div>
             </section>
- <section class="resume-section" id="skills">
+ <section class="resume-section" id="edit">
   <div class="resume-section-content">
     <h2 class="mb-5">剪輯作品</h2>
     <div class="subheading mb-3">我的作品列表</div>
@@ -158,7 +158,7 @@
 </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="picture">
                 <div class="resume-section-content">
                     <h2 class="mb-5">攝影作品</h2>
                     <a href="https://www.youtube.com/watch?v=kUvT3eBfN9w" target="_blank"><img src="assets/picture/mano.png" alt="sillycat01" width="30%" class="crap"></a>
