--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於我</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">學習經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">我的興趣</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">剪輯作品</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">攝影作品</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interest">我的興趣</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#edit">剪輯作品</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#picture">攝影作品</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">即刻聯絡</a></li>
                 </ul>
             </div>
